[package]
name = "muzan-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.4.2"
hyper = { version = "1.10.1", features = ["client", "http1"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["io-util", "net", "fs", "rt-multi-thread"] }
muzanci-transport = { path = "../muzanci-transport" }
rustls = "0.23.40"
tokio-rustls = "0.26.4"
anyhow = "1.0.102"
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
