[package]
name = "muzanci-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.4.2"
hyper = { version = "1.10.1", features = ["client", "http1"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = [
    "io-util",
    "net",
    "fs",
    "rt-multi-thread",
    "process",
] }
muzanci-transport = { path = "../muzanci-transport" }
muzanci-interpreter = { path = "../muzanci-interpreter" }
rustls = "0.23.40"
tokio-rustls = "0.26.4"
anyhow = "1.0.102"
hyper-util = { version = "0.1.20", features = ["tokio"] }
http-body-util = "0.1.3"
bytes = "1.11.1"
futures = "0.3.32"
uuid = { version = "1.23.3", features = ["v7"] }
russh = "0.61.2"
russh-keys = "0.49.2"
nix = { version = "0.31.3", features = ["term"] }
rand = "0.10.1"
tempfile = "3.24.0"
tokio-util = "0.7.18"
thiserror = "2.0.18"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
tracing-error = "0.2.1"

[lib]
name = "muzanci_runner"
path = "src/lib.rs"

[[bin]]
name = "runner"
path = "src/main.rs"
